llvm/dev/intcall2.llvm.bc.err
/usr/lib/llvm-3.8/bin/llvm-as: llvm/dev/intcall2.llvm:15:1: error: expected instruction opcode
}
^
